# 30-days-30-ai-projects

./: README.md
day-01-local-chatbot/: Dockerfile  pyproject.toml
day-01-local-chatbot/src/chatbot/: client.py  service.py
day_1_local_chatbot_with_ollama_and_llama/: README.md  docker-compose.yml
day_1_local_chatbot_with_ollama_and_llama/src/chatbot/: cli.py  config.py  logger.py
