[project]
name = "day1-local-chatbot-with-ollama"
version = "0.1.0"
description = "First project in the series of 30 Days 30 AI Projects series. Day 1 Project: Local Chatbot with Ollama + LLaMA 3.1"
authors = [
    {name = "Suresh Sonwane"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "rich (>=14.1.0,<15.0.0)",
    "pydantic (<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
